<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Constraint Layouts(You1)</string>
    <style name="customEdittext">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>

    </style>

    <string name="enter_name">Enter name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="or">or</string>
    <string name="continue_with_facebook">CONTINUE WITH FACEBOOK</string>
    <string name="login01">Login</string>
    <string name="use_phone_number">USE PHONE NUMBER</string>
    <string name="continue_with_google">CONTINUE WITH GOOGLE</string>
</resources>