<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    
    
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:background="#0583EA"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="20sp"
        android:src="@drawable/ic_vector1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="98dp"
        android:layout_height="52dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toEndOf="@id/ivBack"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        android:id="@+id/constraintLayout"
        android:layout_width="409dp"
        android:layout_height="284dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="63dp"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/tv1"
            style="@style/customEdittext"
            android:hint="@string/email"
            android:padding="10dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="30dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="#0583EA"
            android:textColor="#0583EA"
            app:layout_constraintTop_toBottomOf="@id/tv1" />

        <EditText
            android:id="@+id/tv2"
            style="@style/customEdittext"
            android:layout_marginVertical="65dp"
            android:hint="@string/password"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv1"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="30dp" />

        <View
            android:id="@+id/vvt2"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="#0583EA"
            android:textColor="#0583EA"
            app:layout_constraintTop_toBottomOf="@id/tv2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/use_phone_number"
            android:textColor="#0583EA"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteX="-25dp"
            tools:layout_editor_absoluteY="227dp" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn1"
        android:layout_width="408dp"
        android:layout_height="44dp"
        android:background="#858992"
        android:text="@string/login01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/forgot_password"
        app:layout_constraintBottom_toTopOf="@id/btn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button

        android:id="@+id/btn2"
        android:layout_width="408dp"
        android:layout_height="44dp"
        android:layout_marginTop="164dp"
        android:background="#3B5998"
        android:text="@string/continue_with_facebook"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn1" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="408dp"
        android:layout_height="44dp"
        android:layout_marginTop="240dp"
        android:background="#FFFFFFFF"
        android:text="@string/continue_with_google"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn1" />


    <TextView
        android:id="@+id/tv4"
        android:layout_width="44dp"
        android:layout_height="43dp"
        android:layout_marginStart="48dp"
        android:background="@drawable/ic_google1"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/btn3"
        tools:layout_editor_absoluteY="432dp" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="44dp"
        android:layout_height="43dp"
        android:layout_marginStart="328dp"
        android:background="@drawable/ic_facebook1"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/btn2"
        tools:layout_editor_absoluteY="420dp" />

</androidx.constraintlayout.widget.ConstraintLayout>

